[tool.poetry]
name = "protutor"
version = "0.1.0"
description = ""
authors = ["vitreusx <jakub_bednarz@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
texsoup = "^0.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
